# scam_finder

./: .gitignore  README.MD  main.py  pyproject.toml  settings.py
app/: dependencies.py  logger.py  run_app.py
app/finders/: __init__.py  bot_finders.py  cards_finder.py  domain_finder.py  factories.py  helpers.py  words_finder.py
app/input_readers/: __init__.py  console_reader.py  csv_reader.py  input_reader_factory.py
app/interfaces/: __init__.py  finder.py  input_reader.py  output_writer.py
app/output_writers/: __init__.py  console_writer.py  csv_writer.py  output_writer_factory.py
tests/unit/test_finders/: test_bank_cards.py
