[tool.poetry]
name = "scam-finder"
version = "0.1.0"
description = "."
authors = ["<>"]
license = ""

[tool.poetry.dependencies]
python = "3.10"
dynaconf = "^3.1.9"
colorlog = "^6.6.0"
Inject = "^4.3.1"
tldextract = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = [".cache", ".venv"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.cache
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
